Ajustes del menu principal con el recordatorio

--- a/centro medico/UI/Medicos/frmLiquidacion_Medicos.resx
+++ b/centro medico/UI/Medicos/frmLiquidacion_Medicos.resx
@@ -128,23 +128,23 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABe
-        EgAAAk1TRnQBSQFMAgEBBQIAAQYBAAEGARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
-        ASADAAEBAQABIAYAASD/AC8AAb0BwQHFAf8CAAEIAf8DOgFg8AADTAGPASEBswHoAf8CAAGSAf8CAAGD
-        Af8DTAGP6QABEgGTAf8BCgGlAeEB/wGIAb8B9AH/AgABkgH/AgABpgH/AgABpgH/AgABjwH/4QABCwGl
-        Af8BAAGQAdIB/wEKAaUB4QH/AYYBvQHzAf8CAAGSAf8CAAGmAf8CAAGmAf8CAAGmAf8CAAGlAf8DYgHv
-        1QABCgGpAf8BAAGBAccB/wEAAZAB0gH/AQoBpQHhAf8BhwG+AfQB/wIAAZIB/wIAAaYB/wIAAaYB/wIA
-        AaYB/wIAAaYB/wIAAaYB/wIAAQUB/8wAARkBHQEhAf8BAAEPAbcB/wEAAR4BxAH/AQABkwHVAf8BCgGl
-        AeEB/wEPAZoBxwH/AgABHAH/AgABjQH/AgABpgH/AgABpgH/AgABpgH/AgABpgH/AgABpgH/zgABDAH/
-        AQABEQG6Af8BAAEgAcUB/wEAAZAB0gH/AQABEAGbAf8BAgGeAdwB/wIAAZIB/wIAAaEB/wIAARsB/wIA
-        AaYB/wIAAaYB/wIAAaYB/wIAAaYB/88AAf8BAAEMAbUB/wIAARkB/wIAARsB/wEAAYEBxwH/AQIBngHc
-        Af8CAAGSAf8CAAGmAf8CAAGmAf8CAAGQAf8CAAEJAf8CAAGmAf8CAAGmAf/PAAH/AgABGwH/AQABDAGy
-        Af8BAAEcAcIB/wEAAY4B0QH/AQMBnwHdAf8CAAGSAf8CAAGmAf8CAAGmAf8CAAGmAf8CAAGmAf8CAAGe
-        Af8DAAH/zgABCwH/AQABBgGyAf8BAAEGAbIB/wEAARsBwAH/AwAB/wEAARUBugH/AQABDwG3Af8BAAEP
-        AbcB/wMAAf8CAAGjAf8CAAGmAf8CAAGmAf8CAAGmAf/OAAGNAf8BAAEFAbAB/wEAAQEBnwH/AgABEwH/
-        AQABHgG6Af8BAAEdAbwB/wEAARsBvQH/AQABFwG6Af8BAAEXAboB/wEAAREBuAH/AgABEwH/AgABkgH/
-        AgABkwH/zgABGgH/AgABiAH/AQABjwHIAf8BAAGPAcgB/wEAAYwBxgH/AQABiQHGAf8BAAGGAb4B/wEA
-        AYABwwH/AQABHwHAAf8BAAEfAcAB/wEAARsBuwH/AQABCQGVAf8DTAGPzAADOgFgAzoBYAM6AWADOgFg
-        AgABggH/AQABiwG+Af8BAAGQAckB/wEAAZIBygH/AgABIQH/AzoBYAM6AWDoAAMhATADIQEwAdoB4wHt
+        EgAAAk1TRnQBSQFMAgEBBQEAARABBgEQAQYBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8ALwABvQHBAcUB/wIAAQYB/wM6AWDwAANMAY8BHwGzAegB/wIAAZIB/wIA
+        AYMB/wNMAY/pAAEQAZMB/wEIAaUB4QH/AYgBvwH0Af8CAAGSAf8CAAGmAf8CAAGmAf8CAAGPAf/hAAEJ
+        AaUB/wEAAZAB0gH/AQgBpQHhAf8BhgG9AfMB/wIAAZIB/wIAAaYB/wIAAaYB/wIAAaYB/wIAAaUB/wNi
+        Ae/VAAEIAakB/wEAAYEBxwH/AQABkAHSAf8BCAGlAeEB/wGHAb4B9AH/AgABkgH/AgABpgH/AgABpgH/
+        AgABpgH/AgABpgH/AgABpgH/AgABAwH/zAABFwEbAR8B/wEAAQ0BtwH/AQABHAHEAf8BAAGTAdUB/wEI
+        AaUB4QH/AQ0BmgHHAf8CAAEaAf8CAAGNAf8CAAGmAf8CAAGmAf8CAAGmAf8CAAGmAf8CAAGmAf/OAAEK
+        Af8BAAEPAboB/wEAAR4BxQH/AQABkAHSAf8BAAEOAZsB/wEAAZ4B3AH/AgABkgH/AgABoQH/AgABGQH/
+        AgABpgH/AgABpgH/AgABpgH/AgABpgH/zwAB/wEAAQoBtQH/AgABFwH/AgABGQH/AQABgQHHAf8BAAGe
+        AdwB/wIAAZIB/wIAAaYB/wIAAaYB/wIAAZAB/wIAAQcB/wIAAaYB/wIAAaYB/88AAf8CAAEZAf8BAAEK
+        AbIB/wEAARoBwgH/AQABjgHRAf8BAQGfAd0B/wIAAZIB/wIAAaYB/wIAAaYB/wIAAaYB/wIAAaYB/wIA
+        AZ4B/wMAAf/OAAEJAf8BAAEEAbIB/wEAAQQBsgH/AQABGQHAAf8DAAH/AQABEwG6Af8BAAENAbcB/wEA
+        AQ0BtwH/AwAB/wIAAaMB/wIAAaYB/wIAAaYB/wIAAaYB/84AAY0B/wEAAQMBsAH/AgABnwH/AgABEQH/
+        AQABHAG6Af8BAAEbAbwB/wEAARkBvQH/AQABFQG6Af8BAAEVAboB/wEAAQ8BuAH/AgABEQH/AgABkgH/
+        AgABkwH/zgABGAH/AgABiAH/AQABjwHIAf8BAAGPAcgB/wEAAYwBxgH/AQABiQHGAf8BAAGGAb4B/wEA
+        AYABwwH/AQABHQHAAf8BAAEdAcAB/wEAARkBuwH/AQABBwGVAf8DTAGPzAADOgFgAzoBYAM6AWADOgFg
+        AgABggH/AQABiwG+Af8BAAGQAckB/wEAAZIBygH/AgABHwH/AzoBYAM6AWDoAAMhATADIQEwAdoB4wHt
         Af8DIQEw/wD/AB4AAc4BugGmAf8BrAGXAYQB/wGRAgAB/wGPAgAB/wGPAgAB/wGPAgAB/wGPAgAB/wGP
         AgAB/wGPAgAB/wGPAgAB/wGPAgAB/wGPAgAB/wGPAgAB/wQAAw4BEwMfAS0DPAFmA0MBdwMqAUEDQwF3
         AyoBQQNDAXcDKgFBA0MBdwMqAUEDQwF3AzwBZgMgAS4DDgETFAADSwGOA1kB8gNLAY5EAAMDAQQDLwFJ
@@ -215,18 +215,18 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="GridEX1_DesignTimeLayout_Reference_0.Instance" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAllJREFUOE+t
-        kG1PUmEcxs9H8CP4EXrdq970oraac2Zb2iZN7WHiwFbhehKXmUuEmYFiGqJAKCBlASqIgiwKg8i5HoDO
-        Ag9y1IEasXp1de57x5xbizdd22/3dv737/qfc5hymQt/PisQFQBh5WMGeuPkaXFcPkTezO9hnd+hstHq
-        JAUQx+VDthZ/lFAslrAQ/oAejZYijsuHFgjyfoH4+N8JTTVXvHe1sASHawFz3gUsBUMwW22Iz0opq+4r
-        sHUfbRCVg/jGJRXLk02xVEiBzeTQIX7mHfi1O0P5tKhEeKL28Bv5/f7KwLw99vWthgp93VchkUhQU1OD
-        xq5quK2XsbM+TmXCUK/soECQqyKRSCGTySCXy4HnefBcArlvUbxZtMD7YgDZhBMhvwOjo6OQy9twsrqO
-        JWJFIBCYjsViSKVScLk9YFmWnul0GhPPveA4DvF4HIODg+js7ES/7gmUagOOV9WB8Xg8smg0CrKZSOQy
-        OZPJJAzzY7SUzLVaLR7r9OjVmdDcrqacOHMBjPllkM3vlbBV+I7cdgFpjhfYQGY9i+wGTzebzBY8tTih
-        6Bn5I9dLO3Dq3KUYY5p9B+9KAtEvHBKZbXBbu+DzpGyHFrp9yxie8uKWxgRphxaNN3pR33K3UNt0XUZ/
-        3iPzPAwzYZAiqy8O++IqnME1uJciFMPMa6jGXLjZN4GLwuaGtvvT51uVlVQmaVcZ1bc1Jv+dfgu6hhxQ
-        GV5h4JkPRvss9DYfhqeDVG5S9LHC9mOi9ve0KnVH5Pf0DdcejKgVD8f8wrn/zR3ilf8dhvkNdSf1Pv5T
-        bOUAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAlVJREFUOE+d
+        ku1PUlEcx/kT/BP8E3rdq970oraac2Zb2iZN7WHixFbhehKXmQuEmQFiEiAP4QNSFKA8XAVZFAaRcz0A
+        3cX1KlcdoBmrV9/uPZs015ba2T77vfidz/d3zs4RifZZs7HPZ3kSPBBY/MhAbx4/vZ9X6QvyemEbK1yJ
+        yGaHSwjAYQKw86OMnZ0yQrEP6FdrCIcL4OXdgAOJ0YnWqveeNlrA6QlhNhDCfCQKm2MSqRkJYcl7BZN9
+        R5v+CgyOiasWxluS2agM65nhPfwsOPFry034NCdHzFK/9yoURVWH/VPJr2/VRBzouwqxWIy6ujo099bC
+        67iM0soYkQWGFR1/Ani5Jh6PFxmGQT6fB8dx4Ng08t8SeDNnR+DFEFbTLkQpJwwGA6TSTpysbaBFvFgV
+        Doenk8kkstksPF4faJomNZfLwfI8AJZlkUqloNPp0NPTg0HtE8hVRhyvaYDI5/N1JBIJCJMFSdgs1Ewm
+        A6PfREKFvkajwWOtHgqtFa1dKsKJMxcgsr2M0IXtMjaK35HfLCLHcjxrYFZWsbrGkclWmx1P7S7I+kcr
+        cqOkG6fOXUqKrDPvEFhMI/GFRZrZBLuxBa4ghJVIoDe4gJGJAG6prZB0a9B8Q4HGtrvF+pbrHeQJH9n8
+        MLpjEIIcwRSm5pbgiizDOx8nGN2voTR5cHPAgov8sZs670+fb5dXV96/S2lW3VZbqTuDdvQOO6E0vsLQ
+        syDMUzPQTwYxMh0hcotsgOanH/vnT2yXa49I7+mbrj0YVckemii+7t65+0Bf+H82/QZ1J/U+FM6JvQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="GridEX1_DesignTimeLayout.LayoutString" xml:space="preserve">
