Bug - Al eliminar una fra y confirmar la elimnación sale un cuadro de dialogo en blanco. Bug - en las lineas de las citas, cuando introducias el código de un concepto cargaba descripción , precio, etc.. Ahora no..

--- a/centro medico/UI/Citas/form_citas.resx
+++ b/centro medico/UI/Citas/form_citas.resx
@@ -348,7 +348,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADg
-        CQAAAk1TRnQBSQFMAwEBAAE8AQoBPAEKARgBAAEYAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        CQAAAk1TRnQBSQFMAwEBAAF8AQoBfAEKARgBAAEYAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AWADAAEYAwABAQEAAQgGAAEJGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -519,26 +519,26 @@
   <data name="tsdb_imprimir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARnSURBVEhLxVVZSK1VFLbUzCnDoVJTrrcHzQHF2VJTMRMH
-        pMThekFQErXSF+PC0XDqoqBkjtmDEyiYiJKCoplTD1ogN8wJZ5w9DudoHmc5X2vte4wbVyLt4S74+P+z
-        /72/b61vr72P2osOLV1d3TcNDQ1fU/3+X6EeEBBgm5GR8YlEInnU0dHx/crKys/7+/vSkZGRH+n7S0+n
-        3T20FxYWhnFDTE9PK5OTkz9Uzbt7VFdX5zLh1dUVLi8vBc7Pz4XI+Ph4p2ra3SM0NNT++Pj4kAUuLi4E
-        +dnZmYBcLj9taWkZrK2tdVRNv32EhYV5z8zMrHDGTHp6eoqTkxOQqBCcmJjANxSq6bcPsujb3t5eYRET
-        KxQKHB0dCVy/NzU1zY6OjqYuLS19tLq6qq1a+t+irKzMs7Ky8lwmk4msr4m5kutqqKPOmpub0dfXh6mp
-        qRlqjK9mZ2fNVRQ3Bzmivry8/OrY2JgBOfADLVQolUohsru7C7INw8PDaG1t5QpQVFSEpKQkZGdno7u7
-        G4uLi3vz8/MS5lBR/jPm5uY+oEx+pwlSIlqrr6+/JDF0dXUJwpqaGpB9AlQh0tLSEB8fj9jYWIH8/Hyu
-        DLT+V9qn55tgZ2cnkzMdGhpS0jvIXwwODqKurg4VFRWoqqpCeXk5SktLkZmZiZiYGERHRyMyMhIREREI
-        DAwU742NjSC7ZJRwuIr6adBp/VQqlYKe3I4CLEgT0dbWhsLCQnz9+DFyc3MRFxeH8PBwUEsjODhYkPv7
-        +8PLywuurq7Iysrig6kgoVAVvZpaQ0NDEHWGcmtrCyzEm8wbfHBwgE0aG+jvRx75zbYEBQUJUj8/P/j4
-        +Ahid3d3ODs7w9bWFhYWFkhPT8fk5OQO2fWuEEhJSbE/PDxUrK2tYXNzE9vb22CrWOBPOg8Hv/2CyZoy
-        PHj4AG5uboKUn05OTrCzs4O1tbUgd3Fxga+vrxBmu6g5SoSAo6OjOXXBHpNTb2N9ff1voX2ZHFdyKQae
-        bOGz7wbg7ekKGxsbAXt7e3h4eIAuSVEZEzs4OEBPT080Allcz/x8Sxp3dnYOszVMypUwNjY2hNCBfA9T
-        O1fo+kMOyaMvhR1sE4Or4QpMTEygo6MDDQ0NEN9pYmKioqSk5CELqBP09PX1ranl0trb2weoijPecBbg
-        atbXN3B4IMP56RF6enpE1vfu3QP9T0BLSwuampoiax7jvfH29m43MDC4z+TXoUnQJbxOuO/p6fkxqdfR
-        gdviqnjjuRK+/Ph8WFlZiWyNjY2FTSEhIUhNTRVdVlxcjJycnAVKwpuJn42XCa8Q9AiGBHNTU9P3ycvs
-        /v7+J3t7e0KAzsQ22dBiaWlZTd9WCwoKBGleXt5xQkLCT9RRXxgZGdnQeh0Ccz4XvCfXFbHQW2SBXVRU
-        1OdkoURbW9uTxt7m7+T7O3TocukWzjczM3uPxt4g8AWoRWDr/zVYiCdxJmwdw0D15DENwrPB2XJivObW
-        f6+8mAkZN5b9gkJN7S/62DkdOR9TkQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAARmSURBVEhLxVVZLK1XFNaiaqrG0BYl3D5QQ4jxaA9FVMUQ
+        acVw3URCKmjLi+YmaEy9ISFVY/XBlJCoCCkJoYroA20iGjXFHLPD4VDHLL6ute/R3OZKU/pwV/Ll/8/+
+        9/6+tb699j5qLzq0dHV13zQ0NHxN9ft/hbq/v79denr6JxkZGY87Ojq+X1lZ+Xlvb082PDz8I31/6em0
+        +4f2wsLCEG6JsbGx66SkpA9V8+4f1dXVuUx4dXWFy8tLgfPzcyEyPj7eqZp2/wgJCXE4Pj4+ZIGLiwtB
+        fnZ2JqBQKE5bWloGa2trnVTT7x6hoaHSmZmZFc6YSU9PT3FycgISFYITExP4hkI1/e5BFn3b29srLGJi
+        pVKJo6MjgZv3pqam2ZGRkZSlpaWPVldXtVVL/1uUlZVJKisrz/f390XWN8RcyU011FFnzc3N6Ovrw9TU
+        1Aw1xlezs7PmKorbgxxRX15efnV0dNSAHPiBFiqvr6+FyO7uLsg2DA0NobW1lStAUVEREhMTkZ2dje7u
+        biwuLsrn5+czmENF+c+Ym5v7gDL5nSbIiGitvr7+ksTQ1dUlCGtqakD2CVCFSE1NRVxcHGJiYgTy8/O5
+        MtD6X2mfnm+CnZ2dTM60p6fnmt5B/mJwcBB1dXWoqKhAVVUVysvLUVpaiszMTERHRyMqKgoREREIDw9H
+        QECAeG9sbATZtU8Jh6monwad1k9lMhnoye0owII0EW1tbSgsLMTXT54gNzcXsbGxCAsLA7U0goKCBLmf
+        nx+8vLzg5uaGrKwsTE9PK0koREWvptbQ0BBIGV9vbW2BhXiTeYMPDg6wSWMD/f3II7/ZlsDAQEHq6+sL
+        b29vQezh4QEXFxfY2dnBwsICaWlpmJyc3CG73hUCycnJDoeHh8q1tTVsbm5ie3sbbBUL/Enn4eC3XzBZ
+        U4aHjx7C3d1dkPLT2dkZ9vb2sLGxEeSurq7w8fERwmwXNUeJEHBycjKnLpAzOfU21tfX/xba21fgSiHD
+        wNgWPvtuAFKJG2xtbQUcHBzg6ekJuiRFZUzs6OgIPT090QhkcT3z8y1p3NnZOcTWMClXwtjY2BBCBwo5
+        pnau0PWHAhmPvxR2sE0MroYrMDExgY6ODjQ0NEB8pwkJCcqSkpJHLKBO0NPX17ehlkttb28foCrOeMNZ
+        gKtZX9/A4cE+zk+PuNNE1lZWVqD/CWhpaUFTU1NkzWO8N1KptN3AwOABk9+EJkGX8DrhgUQi+ZjU6+jA
+        bXFVvPFcCV9+fD6sra1FtsbGxsKm4OBgpKSkiC4rLi5GTk7OAiUhZeJn42XCKwQ9giHB3NTU9H3yMru/
+        v39MLpcLAToT22RDi6WlZTV9Wy0oKBCkeXl5x/Hx8T9RR31hZGRkS+t1CMz5XPCe3FTEQm+RBfaRkZGf
+        k4UZ2traEhp7m7+T7+/QoculWzjfzMzsPRp7g8AXoBaBrf/XYCGexJmwdQwD1ZPHNAjPBmfLifGaO/+9
+        8mImZNxa9gsKNbW/AGdhONUFZ/ztAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="tlsVerPacienteSeleccionado.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -621,58 +621,30 @@
         RmkbRyNPfyWy9i9ApuZ8ZO6bh4w9/0bGrtlI3ymN9B0zkbp5AhKX90ecDNXYZ/xgPkPCIlrVW0fCyKf4
         Paz8oSQ0ptxBgmzHGG5shDx9ID2HIeOJBuILNiAmVxVxeauRQoCppZTZ0q1IIviU4q24m7kCR+17HOBr
         4O4clp24TQrJOxcgSWMukrbPQaL6LCRslULClhmI/3ka7i8bhnAp9puOIEfN7gBS13B6D9trcRjSjygh
-        clbHmDs0xoMef2T6MsQVrENkpiLuZivjIUEHxcjiatg0BD6YjfA0OWRWqMPcZ177vOVsAQ8bJcna4jfP
-        wYNNsxG3URpxG2Yidt10xKydipjVkxG+YACCJ7Hf5duTCWg6g66M4nvYMQsuImxGN4TQOW6MP0E76PZA
-        fOFG3E6T5x1JsFEZSjDQ+wom0gw20xg0l3bx0THrG3rSqaffkCHsXzxs5Gxx3FWdjmjVGYhUmYZI5SmI
-        UJqEcMWJuCX1L1wfR6v1d/rG91SLP1DmfhzwHlZ3mgz8qf+GMObKFAa7gz0Qm78G/ikLEfBoEQJTFxGw
-        CoIfLoa9+WAY7up677uJbG7//oz77w73au1QwFj28PoYumOpQQiWG0+egKAlkrg6RQLeI2kR/AH7kH1H
-        MVwmj5nrwNtndFe+/90YL5rLWomynCyL0KzluJ60gIAX8w6jDMc8XocIKo1rsTObDL36+u0xYZMEVMa+
-        ZewblyHsuO9Q1uQ5hCaTlIDv+H5wG8z+X3YXrC+7Nvfi1HFF3O+Pz9sNZTA3+gZxRatxJ3sFAqkUAtOW
-        IiBVDgFUq8EEG5m3CjEFq+EWNKriiBWbL+Dyn7XeWn3ZRKf+zNlxIGtwHcDg3L/D1AfHP2BuPGczcfby
-        131cLBeKe5HsRj49lBWfN5KojitUQnzpz7hfqIZweiMEZygiMH0pblCmbxJ4bOEG2NwYlnPMhv3AwXK7
-        9a/IPTnohWJs6PneTM2qD3O3/pqVOvZlsBfvsB3Z9jPm+t/53dh3diDb9GWPbcRZkHkfdoFib1XvwX9K
-        e4+bzsYpqHUxsr82vOBO6hLEF6shsUwDd3JX4VbGMlxLkcVNAg9KXogTzj2O0DV8AXcjv4PmMt2LzBV3
-        H9qzDdT+ii0wFGO7z/dkx4zEmPvnfLYn0zcQY1qcufGcD4rxWz5xLo4Qj4vLxf/nAWP2vcJ6Nop+dx80
-        gg2Xlmcb9p/r5e4RNet5YukOhOWupgwr4AoBR+Yow8RH3JvGfnlpmTAJerR5PtFT6kx8v3H9X4Ou6xet
-        YzI/SLGftM17RySXbMODEnWEZCnjBtVyZK4KfWj6XBIu/7Lab8rmBiZIthXW6yPzl314kL8BUVEyb+9l
-        SrYl0b4gu/oIHpZy5bAaYflrccFjQftR2+77hMu/nBYbsV7ajl21E4o2IqVCE3nP9FDZYoS6Vis0vLHm
-        f+fV6CClfA/iqBxSKjRgenlgynh5NloI8eUkI2LDdF2/8suv2Yv82mMobzyH5y8tUd9qzQNXNRtTnyGK
-        6kXIqtoJ57DvqhatYbLC5V9WqiZMTN2IrbYPGpkdkSHZlkrbwlKCbmy1xct2Z9S9sqKd2F7cSpzTomsj
-        HjJJ5v/esf81iQ9go8bPZmvW7+9yUs9GIibvl4NohTvq31jAI2JS2bfj2UraEfQWhv99tEGnq2ZW+Q68
-        ggvq20xxOWZC5nfSbKhw+u8ldR021y14TL7fPelKv5jpNec9xe3p9fbZPxj/Duo64Fs2SmIgk+o3mE0T
-        H876Cv2/EmP/AQTJZU08qKjeAAAAAElFTkSuQmCC
+        clbHmDs0xoMef2T6MsQVrENkpiLuZivjIUEHxcjiatg0BD6YjfA0OWRWqOOc67z2ecvZAh42SpK1xW+e
+        gwebZiNuozTiNsxE7LrpiFk7FTGrJyN8wQAET2K/y7cnE9B0Bl0ZxfewYxZcRNiMbgihc9wYf4J20O2B
+        +MKNuJ0mzzuSYKMylGCg9xVMpBlspjFoLu3io2PWN/SkU0+/IUPYv3jYyNniuKs6HdGqMxCpMg2RylMQ
+        oTQJ4YoTcUvqX7g+jlbr7/SN76kWf6DM/TjgPazuNBn4U/8NYcyVKQx2B3sgNn8N/FMWIuDRIgSmLiJg
+        FQQ/XAx788Ew3NX13ncT2dz+/Rn33x3u1dqhgLHs4fUxdMdSgxAsN548AUFLJHF1igS8R9Ii+AP2IfuO
+        YrhMHjPXgbfP6K58/7sxXjSXtRJlOVkWoVnLcT1pAQEv5h1GGY55vA4RVBrXYmc2GXr19dtjwiYJqIx9
+        y9g3LkPYcd+hrMlzCE0mKQHf8f3gNpj9v+wuWF92be7FqeOKuN8fn7cbymBu9A3iilbjTvYKBFIpBKYt
+        RUCqHAKoVoMJNjJvFWIKVsMtaFTFESs2X8DlP2u9tfqyiU79mbPjQNbgOoDBuX+HqQ+Of8DceM5m4uzl
+        r/u4WC4U9yLZjXx6KCs+byRRHVeohPjSn3G/UA3h9EYIzlBEYPpS3KBM3yTw2MINsLkxLOeYDfuBg+V2
+        61+Re3LQC8XY0PO9mZpVH+Zu/TUrdezLYC/eYTuy7WfM9b/zu7Hv7EC26cse24izIPM+7ALF3qreg/+U
+        9h43nY1TUOtiZH9teMGd1CWIL1ZDYpkG7uSuwq2MZbiWIoubBB6UvBAnnHscoWv4Au5GfgfNZboXmSvu
+        PrRnG6j9FVtgKMZ2n+/JjhmJMffP+WxPpm8gxrQ4c+M5HxTjt3ziXBwhHheXi//PA8bse4X1bBT97j5o
+        BBsuLc827D/Xy90jatbzxNIdCMtdTRlWwBUCjsxRhomPuDeN/fLSMmES9GjzfKKn1Jn4fuP6vwZd1y9a
+        x2R+kGI/aZv3jkgu2YYHJeoIyVLGDarlyFwV+tD0uSRc/mW135TNDUyQbCus10fmL/vwIH8DoqJk3t7L
+        lGxLon1BdvURPCzlymE1wvLX4pTjgvajtt33CZd/OS02Yr20HbtqJxRtREqFJvKe6aGyxQh1rVZoeGPN
+        /86r0UFK+R7EUTmkVGjA9PLAlPHybLQQ4stJRsSG6bp+5Zdfsxf5tcdQ3ngOz19aor7VmgeuajamPkMU
+        1YuQVbUTzmHfVS1aw2SFy7+sVE2YmLoRW20fNDI7IkOyLZW2haUE3dhqi5ftzqh7ZUU7sb24lTinRddG
+        PGSSzP+9Y/9rEh/ARo2fzdas39/lpJ6NREzeLwfRCnfUv7GAR8Sksm/Hs5W0I+gtDP/7aINOV82s8h14
+        BRfUt5nicsyEzO+k2VDh9N9L6jpsrlvwmHy/e9KVfjHTa857itvT6+2zfzD+HdR1wLdslMRAJtVvMJsm
+        Ppz1Ffp/Jcb+AwraZS0VUhlEAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="StatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>469, 128</value>
-  </metadata>
-  <metadata name="colBuscar.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="colBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABcAAAAYCAYAAAARfGZ1AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGlSURBVEhLtZFLS0JRFIX9tf2PokFQNIomDSKhIiKy
-        QkypHPTAEKx8pSRmpZWiZKYmKe38Tt64j4N5yQYf7Lv2Omvvc64nuO/7N7TiuNCK40IrGsytHokOnVeH
-        VjRCQudZ6fY+LaCNOsQhqEORjDQ7PWm0u/La+pD6AGo0enh+G+AQOFBrdOS5/i7FWkseqlbQ6OFxFY55
-        9yQthUpTsqWGpO7rkrh7kXjhG2o0enjwDhtg+cCYL7+poOhNVc4yFTm9toJGDw9eV+FsFslUJZwoS+ji
-        SYI20OjhwesqfC9alKVQTma3UzK1EZdJG2j08OB1FR6IPcryYU7md9IyvZlwhKPRw4PXVbg3eCnrx7ey
-        4M/KzFZShbEtUKPRw4N35PA+yhyIlcQbzqsQtuQZgBqNHp5B8Mjhavu1gyt1mO24Pu8L1Gj08OD1L04o
-        7DngEPqoQ8C1eVd+HFAbT2EEx8MrCt0Ay4cJdV0jxA49I7hdTip0A8yBOlSQBo89XDfAHuYGx/b2AbpD
-        bhj6PLoDbvkZYAoeWzioUHMw2E1/wRIM5uaY8Xm+AJ8MjwIu4TnqAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="DescuentoPercent.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Total.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Duracion.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ColumnDtoImp.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
   </metadata>
   <metadata name="LineasCitasBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>946, 17</value>
@@ -991,6 +963,35 @@
   </data>
   <metadata name="BackgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1004, 128</value>
+  </metadata>
+  <metadata name="colBuscar.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="colBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABcAAAAYCAYAAAARfGZ1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAABpUlEQVRIS7WRS0tCURSF/bX9
+        j6JBUDSKJg0ioSIiskJMqRz0wBCsfKUkZqWVomSmJint/E7euI+DeckGH+y79jpr73OuJ7jv+ze04rjQ
+        iuNCKxrMrR6JDp1Xh1Y0QkLnWen2Pi2gjTrEIahDkYw0Oz1ptLvy2vqQ+gBqNHp4fhvgEDhQa3Tkuf4u
+        xVpLHqpW0OjhcRWOefckLYVKU7KlhqTu65K4e5F44RtqNHp48A4bYPnAmC+/qaDoTVXOMhU5vbaCRg8P
+        XlfhbBbJVCWcKEvo4kmCNtDo4cHrKnwvWpSlUE5mt1MytRGXSRto9PDgdRUeiD3K8mFO5nfSMr2ZcISj
+        0cOD11W4N3gp68e3suDPysxWUoWxLVCj0cODd+TwPsociJXEG86rELbkGYAajR6eQfDI4Wr7tYMrdZjt
+        uD7vC9Ro9PDg9S9OKOw54BD6qEPAtXlXfhxQG09hBMfDKwrdAMuHCXVdI8QOPSO4XU4qdAPMgTpUkAaP
+        PVw3wB7mBsf29gG6Q24Y+jy6A275GWAKHls4qFBzMNhNf8ESDObmmPF5vgCfDI8CLuE56gAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <metadata name="DescuentoPercent.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Total.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Duracion.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ColumnDtoImp.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>50</value>
