--- a/centro medico/My Project/Resources.resx
+++ b/centro medico/My Project/Resources.resx
@@ -1421,4 +1421,7 @@ WHERE     (PACIENTES_2.FECHAALTA IS NULL OR
   <data name="Recordatorio_Icon_png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\new\Recordatorio_Icon.png.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FrontPage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\new\frontpage.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
